Fix Vara UI label and placeholder overlap (#1532)

--- a/utils/vara-ui/src/components/input/input.module.scss
+++ b/utils/vara-ui/src/components/input/input.module.scss
@@ -61,7 +61,7 @@
   }
 
   &:not(:focus) {
-    &::-webkit-input-placeholder {
+    &::placeholder {
       color: transparent;
     }
   }
